--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,11 +15,16 @@ body {
     display: flex;
     align-items: center;
 }
+.join-box{
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    margin-left: auto;
+}
 .logo {
     height: 80px;
-}
-.join-msg {
-    color: #fff;
 }
 .btn {
     border: 1px solid #fff;
@@ -31,4 +36,52 @@ body {
     margin-left: 10px;
     text-transform: uppercase;
     cursor: pointer;
+}
+.join-msg {
+    color: #fff;
+    text-transform: uppercase;
+}
+.join-btn{
+    background: #dd0e15;
+    border-color: #dd0e15;
+}
+.main{
+    position: relative;
+    margin-top: 60px;
+    width: 100%;
+    padding: 20px 2.5vw;
+    color: #fff;
+}
+.heading {
+    text-transform: capitalize;
+    font-weight: 900;
+    font-size: 50px;
+}
+.info {
+    width: 50%;
+    font-size: 20px;
+    margin-top: 10px;
+}
+.movie-list{
+    width: 100%;
+    height: 250px;
+    margin-top: 40px;
+    position: relative;
+}
+.movie-category {
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 20px;
+    text-transform: capitalize;
+}
+.movie-container {
+    width: 100%;
+    height: 200px;
+    align-items: center;
+    overflow-x: auto;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
+}
+.movie-category::-webkit-scrollbar{
+    display: none;
 }
