--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,9 +78,10 @@ body {
     width: 100%;
     height: 200px;
     align-items: center;
-    /*overflow-x: auto;
-    overflow-y: hidden;*/
+    overflow-x: auto;
+    overflow-y: hidden;
     scroll-behavior: smooth;
+    display: flex;
 }
 .movie-category::-webkit-scrollbar{
     display: none;
