--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,12 +76,15 @@ body {
 }
 .movie-container {
     width: 100%;
-    height: 200px;
+    height: 250px;
     align-items: center;
     overflow-x: auto;
     overflow-y: hidden;
     scroll-behavior: smooth;
     display: flex;
+}
+.movie-container::-webkit-scrollbar{
+    display: none;
 }
 .movie-category::-webkit-scrollbar{
     display: none;
@@ -116,6 +119,7 @@ body {
     border: none;
     outline: none;
     opacity: 0.5;
+    cursor: pointer;
 }
 .pre-btn:hover, 
 .next-btn:hover{
