--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,6 +107,7 @@ body {
     transform: scale(1.1);
     padding-right: 10px;
     padding-left: 10px;
+    padding-bottom: 10px;
 }
 .movie p{
     text-transform: capitalize;
